--- a/styles/style.css
+++ b/styles/style.css
@@ -5,16 +5,20 @@ body{
 
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #ffffff;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 
 }
 .top-players{
@@ -52,6 +56,12 @@ hr{
 Top Blog Styles
 ---------------------- */
 
+
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
 .blog{
     display:flex;
 }
@@ -76,4 +86,31 @@ Top Blog Styles
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+
+
+
+/* Latest Courses */
+
+.courses{
+    display: flex;
+
+}
+.course-info{
+    display: flex;
+}
+
+.courses .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+
+.fa-star.filled{
+    color: #FFC014;
+    font-size: 12px;
+}
+
+.fa-star.empty{
+    color : #AEAEAE;
+    font-size: 12px;
 }
